--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -75,3 +75,8 @@ header {
       transition: all 0.5s;
       transform: scale(1.2);
   }
+
+  .nav-item:hover {
+    transition: none;
+    transform: none;
+}
