--- a/css/style.css
+++ b/css/style.css
@@ -160,26 +160,31 @@ header {
 
 /* PAGINA TURNOS */
 .parrafoFormulario {
-  color: #000000;
-  line-height: 2;
-  font-family: 'Roboto Condensed', sans-serif; }
-
-.botonesForm {
-  margin-top: 15px;
+  color: #3e0263;
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bolder;
-  padding: 5px; }
+  margin-bottom: 0.8rem;
+  margin-top: 0.8rem; }
+
+.botonesForm1, .botonesForm2 {
+  margin-top: 5px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: bolder; }
+
+.botonesForm1 {
+  color: white;
+  background-color: #4b884b; }
+
+.botonesForm2 {
+  color: white;
+  background-color: #c44f4f; }
 
 .formulario {
   text-align: center;
-  padding-top: 40px;
+  padding-top: 25px;
   padding-bottom: 40px; }
 
 form ul li {
   list-style-type: none; }
-
-form {
-  text-align: center; }
 
 /* PAGINA CONTACTO */
 .alignContacto {
