--- a/scss/base/_mediaQueries.scss
+++ b/scss/base/_mediaQueries.scss
@@ -112,7 +112,9 @@
     .gridHistoria2 {
         grid-area: gridHistoria2;
     }
-
+.carousel-caption {
+    display: none;
+}
 }
 
 /*MEDIA QUERY IPAD FAQ*/
