--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,5 +18,6 @@ body {
 @import 'components/contacto';
 @import 'components/trabajos';
 @import 'components/footer';
+@import 'components/404page';
 @import 'base/mediaQueries';
 @import 'base/animacionesTransformaciones';
