--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ footer {
     margin-bottom: 20px;
     width: 100%; }
   .parrafoHistoria {
-    font-size: 1em;
+    font-size: 1.3em;
     margin-bottom: 20px;
     margin-right: 10px;
     margin-left: 10px; }
@@ -425,7 +425,8 @@ footer {
     margin-top: 60px;
     font-size: 250%; }
   .parrafoFormulario {
-    color: #000000; }
+    color: #000000;
+    font-size: 1.3em; }
   .formulario {
     padding-top: 20px;
     padding-bottom: 30px; } }
@@ -447,7 +448,7 @@ footer {
   .mapa {
     width: 80%; }
   .parrafoContacto {
-    font-size: 1em; } }
+    font-size: 1.3em; } }
 
 /*MEDIA QUERY IPAD TRABAJOS*/
 @media only screen and (max-width: 768px) {
@@ -463,7 +464,7 @@ footer {
     margin-top: 40px;
     font-size: 305%; }
   .parrafoTrabajo {
-    font-size: 0.9em; }
+    font-size: 1.3em; }
   .gridContainer {
     display: grid;
     justify-content: center;
@@ -490,7 +491,11 @@ footer {
 /*MEDIA QUERY IPHONE 6/7/8 PLUS FOOTER */
 @media only screen and (max-width: 414px) {
   .imgLogo {
-    width: 8.5%; } }
+    width: 9%; }
+  .imgRedes {
+    width: 22px; }
+  .pFooter {
+    font-size: 0.9em; } }
 
 /* ANIMACIÓN TURNOS */
 .tituloTurnos {
